# GEOS

./: .gitignore  .travis.yml  CMakeLists.txt  LICENSE.txt  README.md  TODO  index.html  params.json  run.sh  tags
benchmarks/: saferun
dataAnalysis/: analyseEstimation.sh  analyser.sh  generateGCOV.sh  meansure.sh  meansureHeuristicRandom.sh  realtimeExecutionTime.sh  speedupHashPlusInst  speedupHashW  speedupHashW2  speedupHashW3  speedupInst  stamp  stampHashPlusInstM  stampHashWM  timeHashPlusInstM  timeInstCostM  timeInstM  timeO0  timeO2
dataAnalysis/graphics/: graphBars.R  statistic.R
dataAnalysis/speedup/: analyser.sh  analysisO2.sh  meansure2.sh  timeHashPlusInstM  timeHashWM  timeInstCostM  timeRandM
database/: createDatabase.sh
database/xeon/: db
docs/: BranchAnalysis_8cpp.html  BranchAnalysis_8cpp__incl.map  BranchAnalysis_8cpp__incl.md5  BranchAnalysis_8cpp_source.html  CacheAnalysis_8cpp__incl.md5  CacheAnalysis_8cpp_source.html  CallCostAnalysis_8cpp.html  CallCostAnalysis_8cpp__incl.map  CallCostAnalysis_8cpp__incl.md5  CallCostAnalysis_8cpp_source.html  CallCostReader_8cpp.html  CallCostReader_8cpp__incl.map  CallCostReader_8cpp_source.html  CallCostReader_8h.html  CallCostReader_8h__dep__incl.md5  CallCostReader_8h__incl.md5  CallCostReader_8h_source.html  CallCost_8cpp.html  CallCost_8cpp__incl.md5  CallCost_8cpp_source.html  CodeGenModule_8h.html  CodeGenModule_8h__dep__incl.map  CodeGenModule_8h__dep__incl.md5  CodeGenModule_8h__incl.map  CodeGenModule_8h_source.html  CostAnalysis_8h.html  CostAnalysis_8h__incl.md5  CostAnalysis_8h_source.html  CostEstimatorOptions_8h.html  CostEstimatorOptions_8h__incl.map  CostEstimatorOptions_8h_source.html  CostEstimator_8cpp.html  CostEstimator_8cpp__incl.map  CostEstimator_8cpp_source.html  CostEstimator_8h.html  CostEstimator_8h__incl.map  CostEstimator_8h_source.html  CostModel_8cpp.html  CostModel_8cpp__incl.md5  CostModel_8cpp_source.html  (+405 more)
docs/html/: AnalysisMethod_8h.html  AnalysisMethod_8h__dep__incl.map  AnalysisMethod_8h__dep__incl.md5  AnalysisMethod_8h__incl.map  AnalysisMethod_8h__incl.md5  AnalysisMethod_8h_source.html  BBDescriptor_8cpp.html  BBDescriptor_8cpp__incl.map  BBDescriptor_8cpp__incl.md5  BBDescriptor_8cpp_source.html  BBDescriptor_8h.html  BBDescriptor_8h__dep__incl.map  BBDescriptor_8h__dep__incl.md5  BBDescriptor_8h__incl.md5  BBDescriptor_8h_source.html  BBHashExtractorFromIR_8cpp.html  BBHashExtractorFromIR_8cpp__incl.map  BBHashExtractorFromIR_8cpp__incl.md5  BBHashExtractorFromIR_8cpp_source.html  BBHash_8cpp.html  BBHash_8cpp__incl.map  BBHash_8cpp__incl.md5  BBHash_8cpp_source.html  BBHash_8h.html  BBHash_8h__dep__incl.map  BBHash_8h__dep__incl.md5  BBHash_8h__incl.map  BBHash_8h__incl.md5  BBHash_8h_source.html  BBProf_8cpp.html  BBProf_8cpp__incl.md5  BBProf_8cpp_source.html  BranchAnalysis_8cpp.html  BranchAnalysis_8cpp__incl.map  BranchAnalysis_8cpp__incl.md5  BranchAnalysis_8cpp_source.html  CacheAnalysis_8cpp.html  CacheAnalysis_8cpp__incl.map  CacheAnalysis_8cpp__incl.md5  CacheAnalysis_8cpp_source.html  (+764 more)
docs/search/: all_11.js  all_12.js  all_13.js  all_14.js  all_16.js  all_17.js  all_5.js  all_6.js  all_9.js  all_d.js  all_e.js  classes_3.js  classes_4.js  classes_6.js  classes_7.js  classes_9.js  classes_a.js  defines_1.js  defines_5.js  defines_6.js  enums_0.js  enums_2.js  enumvalues_1.js  enumvalues_10.js  enumvalues_2.js  files_1.js  (+41 more)
examples/: Analyser.cpp  CMakeLists.txt  Fixed.cpp  Random.cpp  Test.cpp
experiments/: Otest  Otest2  Otest3  Otest4  Otest6  Otest7  Otest8  Otest9  analyseEstimation.sh  analyseO.sh  executeRealtime.sh  generateCallCosts.sh  generateGCOV.sh  realtimeExecutionTime.sh  speedup.sh  stamp  stampBranch  stampBranchS  stampCache  stampCache10  stampCache11  stampCache12  stampCache13  stampCache2  stampCache3  stampCache4  stampCache6  stampCache7  stampCache8  stampCache9  stampCacheS  stampCall  stampCallS  stampStaticInstruction  stampTTIInstruction  stampTTIInstruction2  stampTTIInstructionS
include/: AnalysisMethod.h  BBDescriptor.h  BBHash.h  CostAnalysis.h  CostEstimator.h  CostEstimatorOptions.h  DatabaseManager.h  EnumString.h  GEOS.h  GEOSCommandLineParser.h  ProfileModule.h
src/: BBDescriptor.cpp  BBHash.cpp  CMakeLists.txt  DatabaseManager.cpp  GEOS.cpp  GEOS.cpp~  PAPI.cpp  ProfileModule.cpp  mergeDatabase.cpp
src/CostEstimator/: CMakeLists.txt  CostEstimator.cpp
src/CostEstimator/CostAnalysis/: CMakeLists.txt
src/CostEstimator/CostAnalysis/Branch/: BranchAnalysis.cpp  CMakeLists.txt
src/CostEstimator/CostAnalysis/Cache/: .CacheAnalysis.cpp.swj  .CacheAnalysis.cpp.swk  .CacheAnalysis.cpp.swl  .CacheAnalysis.cpp.swm  .CacheAnalysis.cpp.swn  .CacheAnalysis.cpp.swo  CMakeLists.txt  CacheAnalysis.cpp  InstructionCacheAnalysis.cpp  MachineFunctionAnalysis.cpp  RegisterUseAnalysis.cpp
src/CostEstimator/CostAnalysis/Call/: CMakeLists.txt  CallCostAnalysis.cpp
src/CostEstimator/CostAnalysis/Instruction/: CMakeLists.txt
src/CostEstimator/CostAnalysis/Instruction/StaticCost/: CMakeLists.txt  InstructionCostEstimator.cpp  StaticCostEstimator.cpp
src/CostEstimator/CostAnalysis/Instruction/TTI/: CMakeLists.txt  CostModel.cpp  TTIInstructionAnalysis.cpp
src/CostEstimator/CostAnalysis/Random/: CMakeLists.txt  RandomCost.cpp
src/FunctionCostEstimator/CostEstimator/: CMakeLists.txt
src/analyser/: CMakeLists.txt  main.cpp
src/analyser/AnalysisMethod/: FrequencyMethod.cpp  HashMethod.cpp  HashWeighted.cpp  InstructionCost.cpp  InstructionMethod.cpp  InstructionPlusHashMethod.cpp  ProfMethod.cpp  RandomMethod.cpp
src/heuristics/: .Random.cpp.swo  CMakeLists.txt  Random.cpp  RandomOnFunction.cpp  Test.cpp
stamps/: generateGCOV.sh  stamp  stampInstCostM
test/: AllTests.cpp  CMakeLists.txt  db  db2  test.ll
tools/: Analyser.cpp  BestO.cpp  BestRandom.cpp  CMakeLists.txt  CodeMetric.cpp  FMM.cpp  Genetic.cpp  OptAnalyser.cpp  OptTest.cpp  Orchestration.cpp  RandomSearch.cpp  SeqAnalyser.cpp
unittest/: AllTests.cpp  BBDescriptorTests.cpp  BBHashTests.cpp  CMakeLists.txt  DatabaseManagerTests.cpp  db  test.ll
(+20821 files in other folders)
